Add spacing as proton component.

--- a/docs/source/default/patterns/03-organisms/header/header.twig
+++ b/docs/source/default/patterns/03-organisms/header/header.twig
@@ -38,9 +38,9 @@
       </a>
     </div>
 
-    {% if menu_top is not empty %}
+    {% if top_menu is not empty %}
       <div class="hidden md:flex flex-1">
-        {{ menu_top }}
+        {{ top_menu }}
       </div>
     {% endif %}
   </div>
