--- a/docs/source/default/patterns/04-templates/page/page.twig
+++ b/docs/source/default/patterns/04-templates/page/page.twig
@@ -22,6 +22,7 @@
 {% include "@templates/site-container.twig" with {
   menu: menu,
   footer_menu: footer_menu,
+  top_menu: top_menu,
   show_hamburger: true,
   content: content,
 } %}
