--- a/docs/source/default/patterns/04-templates/site-container.twig
+++ b/docs/source/default/patterns/04-templates/site-container.twig
@@ -1,7 +1,7 @@
 {# Include this template inside the page.html.twig in drupal. #}
 
 {% block header %}
-  {% include '@organisms/header/header.twig' with {show_hamburger: show_hamburger, menu_top: menu_top, has_spacer: header_has_spacer, variant: "fixed" } only %}
+  {% include '@organisms/header/header.twig' with {show_hamburger: show_hamburger, top_menu: top_menu, has_spacer: header_has_spacer, variant: "fixed" } only %}
 {% endblock header %}
 
 {{ highlighted }}
