--- a/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/slider/slider.twig
@@ -20,7 +20,7 @@
   columns: '1',
   column_1: column_1,
   items: items,
-  width: 'default',
+  width: width,
   columns_width_1: 'equal',
 } only %}
   {% block column_1 %}
