--- a/docs/source/default/patterns/04-templates/page/page.twig
+++ b/docs/source/default/patterns/04-templates/page/page.twig
@@ -1,18 +1,6 @@
 {#
 /**
  * @file
- * page
- *
- * See page.wingsuit.yaml for documentation.
- */
-#}
-
-{#
-  Defaults
-#}
-{#
-/**
- * @file
  * Grid component
  *
  * See component.wingsuit.yml for usage.
@@ -25,5 +13,6 @@
   top_menu: top_menu,
   show_hamburger: true,
   content: content,
+  display_menu: display_menu,
 } %}
 
