--- a/docs/apps/pages/pages/html.twig
+++ b/docs/apps/pages/pages/html.twig
@@ -1,16 +1,28 @@
 <html>
   <head>
     <title>{{ meta_title }}</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170378669-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-170378669-1');
+    </script>
+
     {% for file in css %}
     <link rel="stylesheet" href="/{{ file }}">
     {% endfor %}
     <link rel="shortcut icon" href="/favicons/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicons/favicon-16x16.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="48x48" href="/favicons/favicon-48x48.png">
     <link rel="manifest" href="/favicons/manifest.json">
     <meta name="mobile-web-app-capable" content="yes">
     <meta name="theme-color" content="#fff">
+
     <meta name="application-name" content="Wingsuit Documentation Page">
     <link rel="apple-touch-icon" sizes="57x57" href="/favicons/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/favicons/apple-touch-icon-60x60.png">
