(docs) Add meta title and description.

--- a/docs/apps/pages/pages/html.twig
+++ b/docs/apps/pages/pages/html.twig
@@ -1,6 +1,9 @@
 <html>
-  <head>
-    <title>{{ meta_title }}</title>
+  <meta>
+    <link rel="preload" href="/font/Inter.var.woff2" as="font" type="font/woff2" crossorigin>
+
+    <title>{{ meta_title }} | Wingsuit</title>
+    <meta type="description" content="{{ meta_description }}"/>
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-170378669-1"></script>
     <script>
