--- a/docs/source/default/patterns/03-organisms/header/header.twig
+++ b/docs/source/default/patterns/03-organisms/header/header.twig
@@ -11,7 +11,7 @@
 
 {# TEMPLATE #}
 <header class="{{ header_classes }}">
-  <div class=" h-full flex justify-between md:justify-none items-center md:max-w-7xl">
+  <div class=" h-full flex justify-between md:justify-none items-center">
     <div class="w-3/6 md:w-2/6 max-w-xs md:max-w-7xl ml-3">
       <div class="flex items-center">
         {% include "@atoms/logo/logo.twig" only %}
