--- a/docs/apps/pages/pages/guides/quick-start-guide/quick.twig
+++ b/docs/apps/pages/pages/guides/quick-start-guide/quick.twig
@@ -33,6 +33,7 @@
 
 {% include "@templates/site-container.twig" with {
   menu: pattern_preview('menu', {}, 'primary'),
+  top_menu: pattern_preview('menu', {}, 'top'),
   footer_menu: null,
   show_hamburger: true,
   content: body,
