--- a/docs/source/default/tokens/tokens.css
+++ b/docs/source/default/tokens/tokens.css
@@ -4,32 +4,10 @@
     font-weight: 1 999;
     font-display: swap;
     src: local(''),
-    url('fonts/inter/Inter.var.woff2') format('woff2');
+    url('/font/Inter.var.woff2') format('woff2');
   }
 }
 
-/* inter-regular - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 400;
-  src: url('fonts/inter/inter-v3-latin-regular.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('fonts/inter/Inter.var.woff2') format('woff2');
-}
-/* inter-600 - latin */
-@font-face {
-  font-family: 'Inter';
-  font-style: normal;
-  font-weight: 600;
-  src: url('fonts/inter/inter-v3-latin-600.eot'); /* IE9 Compat Modes */
-  src: local(''),
-  url('fonts/inter/inter-v3-latin-600.eot?#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('fonts/inter/inter-v3-latin-600.woff2') format('woff2'), /* Super Modern Browsers */
-  url('fonts/inter/inter-v3-latin-600.woff') format('woff'), /* Modern Browsers */
-  url('fonts/inter/inter-v3-latin-600.ttf') format('truetype'), /* Safari, Android, iOS */
-  url('fonts/inter/inter-v3-latin-600.svg#Inter') format('svg'); /* Legacy iOS */
-}
 
 html {
   height: 100%;
