--- a/docs/source/default/patterns/03-organisms/header/header.twig
+++ b/docs/source/default/patterns/03-organisms/header/header.twig
@@ -12,8 +12,8 @@
 {# TEMPLATE #}
 <header class="{{ header_classes }}">
   <div class=" h-full flex justify-between md:justify-none items-center">
-    <div class="w-3/6 md:w-2/6 max-w-xs md:max-w-7xl ml-3">
-      <div class="flex items-center">
+    <div class="w-4/6 md:w-2/6 max-w-xs md:max-w-7xl ml-3">
+      <div class="flex items-center -ml-3 md:ml-0">
         {% include "@atoms/logo/logo.twig" only %}
         <span class="text-xs text-gray-300">v1.1</span>
       </div>
