--- a/docs/source/default/patterns/01-atoms/rich-text/rich-text.twig
+++ b/docs/source/default/patterns/01-atoms/rich-text/rich-text.twig
@@ -12,8 +12,11 @@
 <div
 {{ attributes|default(create_attribute()).addClass(
   [
-    variant == 'default' ? 'max-w-none prose lg:prose-lg',
-    variant == 'large' ? 'max-w-none prose prose-lg md:prose-2xl'
+    'dark:prose-dark prose',
+    text_align == 'center' ? 'text-center',
+    width == 'small' ? 'max-w-3xl mx-auto': 'max-w-none',
+    variant == 'default' ? 'lg:prose-lg',
+    variant == 'large' ? 'prose-lg md:prose-2xl'
   ]
 ) }}
 >
