--- a/docs/source/default/patterns/03-organisms/footer/footer.twig
+++ b/docs/source/default/patterns/03-organisms/footer/footer.twig
@@ -1,4 +1,4 @@
-<footer class="text-gray-700 body-font">
+<div>
   <div class="bg-yellow-100">
     {% if footer_menu is not empty %}
       {% embed "@organisms/container/container.twig" %}
@@ -30,4 +30,4 @@
       {% endblock %}
     {% endembed %}
   </div>
-</footer>
+</div>
