--- a/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
+++ b/starter-kits/tailwind/source/default/patterns/04-templates/site-container.twig
@@ -1,7 +1,12 @@
 {# Include this template inside the page.html.twig in drupal. #}
 
 {% block header %}
-  {% include '@organisms/header/header.twig' with {menu: primary_menu, has_spacer: header_has_spacer, variant: "sticky", language_select: language_select,} only%}
+  {% include '@organisms/header/header.twig' with {
+    menu: primary_menu,
+    has_spacer: header_has_spacer,
+    variant: "sticky",
+    language_select: language_select
+  } only%}
 {% endblock header %}
 
 {{ highlighted }}
