(fix) Fix padding top/bottom padding_x defaults behavior.

--- a/docs/source/default/patterns/02-molecules/modal/modal.twig
+++ b/docs/source/default/patterns/02-molecules/modal/modal.twig
@@ -2,7 +2,10 @@
   <div v-if="modal.visible" @click.self="modal.visible = false" class="h-screen w-full absolute flex items-center justify-center bg-modal">
     <div class="bg-white rounded shadow p-8 m-4 max-w-xs max-h-full text-center overflow-y-scroll">
       <div class="mb-4">
-        <p>{{ content }}</p>
+        <video autoplay muted loop class="w-full">
+          <source x-bind:src="modalVideoUrl" type="video/mp4"/>
+          Your browser does not support the video tag.
+        </video>
       </div>
     </div>
   </div>
