--- a/starter-kits/tailwind/apps/drupal/templates/misc/status-messages.html.twig
+++ b/starter-kits/tailwind/apps/drupal/templates/misc/status-messages.html.twig
@@ -31,6 +31,7 @@
 {% set messages_attributes = attributes %}
 {% embed '@organisms/container/container.twig' with {
   padding_top: 'default',
+  width: 'default',
   padding_bottom: 'small',
   message_list: message_list,
   messages_attributes: messages_attributes
