--- a/starter-kits/tailwind/source/default/patterns/01-atoms/svg/_svg--icon.twig
+++ b/starter-kits/tailwind/source/default/patterns/01-atoms/svg/_svg--icon.twig
@@ -3,7 +3,9 @@
 {% set classes = ([
   'svg',
   fill_color,
-  size,
+  size == 'small' ? 'w-3 h-3',
+  size == 'medium' ? 'w-4 h-4',
+  size == 'large' ? 'w-5 h-5',
 ] | sort | join(' ') | trim )%}
 
 {% set attributes = attributes|default(create_attribute()).addClass(classes) %}
