--- a/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
+++ b/starter-kits/tailwind/source/default/patterns/03-organisms/footer/footer.twig
@@ -40,25 +40,25 @@
         <a class="text-gray-500">
           {% include "@atoms/svg/_svg--icon.twig" with {
             icon: "facebook",
-            size: 'w-5 h-5',
+            size: 'small',
           } only %}
         </a>
         <a class="ml-3 text-gray-500">
           {% include "@atoms/svg/_svg--icon.twig" with {
             icon: "instagram",
-            size: 'w-5 h-5',
+            size: 'medium',
           } only %}
         </a>
         <a class="ml-3 text-gray-500">
           {% include "@atoms/svg/_svg--icon.twig" with {
             icon: "twitter",
-            size: 'w-5 h-5',
+            size: 'medium',
           } only %}
         </a>
         <a class="ml-3 text-gray-500">
           {% include "@atoms/svg/_svg--icon.twig" with {
             icon: "linkedin",
-            size: 'w-5 h-5',
+            size: 'medium',
           } only %}
         </a>
       </span>
