--- a/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
+++ b/starter-kits/tailwind/apps/storybook/patterns/05-pages/homepage/homepage.twig
@@ -36,6 +36,7 @@
         {{ pattern_preview('accordion_item') }}
       {% endblock %}
     {% endembed %}
+
     {% embed "@organisms/section/section.twig" with { columns: 1, display_header_region: true } %}
       {% block header%}
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Banner</h2>" }%}
@@ -44,7 +45,7 @@
         {{ pattern_preview('banner') }}
       {% endblock %}
     {% endembed %}
-    {% embed "@organisms/section/section.twig" with { columns: 3, equal_height: true } %}
+    {% embed "@organisms/section/section.twig" with { columns: 3, equal_height: true, display_header_region: true } %}
       {% block header%}
         {% include "@atoms/rich-text/rich-text.twig" with { text: "<h2 class=text-center>Cards</h2>" }%}
       {% endblock %}
