--- a/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/card/card.twig
@@ -53,7 +53,7 @@
       {{ "Read more now"|t }}
       {% include "@atoms/svg/_svg--icon.twig" with {
         icon: 'arrow',
-        size: 'w-4 h-4 ml-2',
+        size: 'small',
       } only %}
     </div>
   {% endif %}
