--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -72,7 +72,7 @@
             class="{{ menu_level == 1 ? 'float-right transform center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3' : 'float-right lg:hidden transform center-origin transition duration-100 ease-in' }} cursor-pointer" {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
             :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}">
             {% include "@atoms/svg/_svg--icon.twig" with {
-              size: 'w-5 h-5',
+              size: 'small',
               icon: 'sort-down'
             } only %}
           </div>
