--- a/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
+++ b/starter-kits/tailwind/source/default/patterns/02-molecules/menu/_menu--primary.twig
@@ -34,8 +34,15 @@
                   {{ item.title }}
                 </a>
                 {% if item.below %}
-                  <div class="{{ menu_level == 1 ? 'float-right transform center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3' : 'float-right lg:hidden transform center-origin transition duration-100 ease-in' }} cursor-pointer" {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
-                    :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}">
+                  <div
+                    class=" {{
+                      menu_level == 1
+                        ? 'float-right center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3'
+                        : 'float-right lg:hidden center-origin transition duration-100 ease-in'
+                    }} cursor-pointer"
+                    {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
+                    :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}"
+                  >
                     {{ menus.dropdown_menu(menu_level) }}
                   </div>
                 {% endif %}
@@ -69,8 +76,14 @@
         </a>
         {% if item.below %}
           <div
-            class="{{ menu_level == 1 ? 'float-right transform center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3' : 'float-right lg:hidden transform center-origin transition duration-100 ease-in' }} cursor-pointer" {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
-            :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}">
+            class="{{
+              menu_level == 1
+                ? 'float-right center-origin transition duration-100 ease-in lg:-rotate-90 lg:px-3'
+                : 'float-right lg:hidden center-origin transition duration-100 ease-in'
+            }} cursor-pointer"
+            {% if item.below %} @click="submenuIsOpen = !submenuIsOpen;" {% endif %}
+            :class="{'rotate-180': submenuIsOpen, 'rotate-0': !submenuIsOpen}"
+          >
             {% include "@atoms/svg/_svg--icon.twig" with {
               size: 'small',
               icon: 'sort-down'
